--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,6 +19,7 @@
 @import 'ui/slider-card.scss';
 @import 'ui/pagination.scss';
 @import 'ui/navigation.scss';
+@import 'ui/search-form.scss';
 
 // LAYOUT
 @import 'layout/header.scss';
