--- a/src/components/layout/header.pug
+++ b/src/components/layout/header.pug
@@ -1,4 +1,22 @@
 mixin header(headerMods, currentUrl)
+  -
+    const optionsPhones = [
+      {
+        link: 'tel:+79999999999',
+        nameItem: '+7 999 999-99-99',
+        ariaLabel: 'Переход к звонку по телефону'
+      },
+      {
+        link: 'tel:+79999999999',
+        nameItem: '+7 999 999-99-99',
+        ariaLabel: 'Переход к звонку по телефону'
+      },
+      {
+        link: 'tel:+79999999999',
+        nameItem: '+7 999 999-99-99',
+        ariaLabel: 'Переход к звонку по телефону'
+      },
+    ];
 
   header.header(class=headerMods)
     +header-bar().header__header-bar
@@ -24,37 +42,31 @@ mixin header(headerMods, currentUrl)
 
           +search-form().header__search-form
 
-        //--var serachFormClassName = 'header__search-form'
-          include /components/ui/search-form.pug
-
-      //-div.header__buttons
+        .header__buttons
           .header__contacts
-            span.header__contacts-trigger +7 (492)
-              svg
-                use(href="/images/sprite.svg#triangle")
+            span.header__contacts-trigger +7 (492) 999-99-99
+              +icon("triangle", 8, 6)
             .header__contacts-tooltip
+
               .header__contacts-tooltip-item
                 .header__contacts-tooltip-title Контактный телефон
-                a(href="tel:+79999999999") +7 999 999 99 99
-                a(href="tel:+79999999999") +7 999 999 99 99
-                a(href="tel:+79999999999") +7 999 999 99 99
+                each option in optionsPhones
+                  +link({href: option.link, text: option.nameItem, ariaLabel: option.ariaLabel}).header__callback-phones
+
               .header__contacts-tooltip-item
                 .header__contacts-tooltip-title Почта
-                a(href="mailto:avd-instrument@bk.ru") avd-instrument@bk.ru
-              .header__contacts-tooltip-item
-                .header__contacts-tooltip-title Написать в соц. сетях
-                - var socialsClass = 'header__contacts-socials socials--dark'
-                include /components/ui/socials.pug
+                +link({href: "mailto:info@mail.ru", text: "info@mail.ru", ariaLabel: "Написать на e-mail"}).header__callback-mail
 
-          button.header__callback-button.button(type="button") Заказать звонок
+            button.header__callback-button(type="button") Заказать звонок
+
           button.header__search-button(type="button")
-            svg
-              use(href="/images/sprite.svg#search")
-          button.header__cart-button.header__cart-button--has(type="button")
+            +icon("search", 18, 18)
+
+          +btn().btn--cart-main.header__cart-button.header__cart-button--has
             span.header__cart-icon
-              svg
-                use(href="/images/sprite.svg#cart")
-            span.header__cart-value 1
+              +icon("icon-cart", 18, 21)
+            span.header__cart-value 0
+
           button.header__burger-button(type="button")
             span
             span
