--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -2,6 +2,31 @@
   max-width: 100vw;
   color: $base;
 
+  z-index: 3;
+  position: sticky;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: $white;
+  border-bottom: 1px solid $border-fill;
+
+  @include vp-tablet-landscape {
+    top:-46px
+  }
+
+
+&__inner {
+  padding: 20px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: $white;
+
+  @include vp-tablet {
+    padding:25px 0;
+  }
+}
+
   &__brand {
     display: flex;
     gap: 9px;
@@ -55,4 +80,644 @@
     }
   }
 
+  &__middle {
+    display: flex;
+    gap: 14px;
+  }
+
+  &__catalog {
+    display: none;
+    align-items: center;
+    gap: 12px;
+
+    @include vp-tablet-landscape {
+      display: flex;
+    }
+
+    svg {
+      width: 14px;
+      height: 14px;
+    }
+  }
+
+  &--menu-opened &__burger-button {
+    background-color: $primary;
+
+    span:first-child {
+      transform: rotate(45deg) translateY(6px) translate(6px);
+    }
+
+    span:nth-child(2) {
+      opacity: 0;
+    }
+
+    span:last-child {
+      transform: rotate(-45deg) translateY(-6px) translate(5px);
+    }
+  }
+
+  &__search-button,
+  &__cart-button,
+  &__burger-button {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 0;
+    border-radius: 8px;
+    width: 48px;
+    height: 48px;
+    padding: 0;
+  }
+
+  &__burger-button {
+    z-index: 1;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 6px;
+    background-color: $primary;
+    padding: 11px;
+
+    @include vp-tablet-landscape {
+      display:none;
+    }
+
+    span {
+      background-color: $white;
+      width: 26px;
+      height: 2px;
+      border-radius: 20px;
+      transition: all .3s ease-in-out;
+    }
+  }
+
+  &--menu-opened &__search-form {
+    z-index: 1;
+    position: absolute;
+    padding-top: 29px;
+    padding-right: 80px;
+
+    @include vp-tablet {
+      padding-top:33px;
+      padding-right: 90px;
+    }
+
+    @include vp-tablet-landscape {
+      position:static;
+    }
+  }
+
+  &__search-form {
+    z-index: -1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: $white;
+    padding: 22px 20px;
+    transition: all .3s ease-in-out;
+
+    @include vp-tablet {
+      padding:22px 30px;
+    }
+
+    @include vp-tablet-landscape {
+      z-index:1;
+      flex-shrink: 0;
+      position: relative;
+      padding: 0;
+      display: block;
+      max-width: 460px;
+      width: 100%;
+    }
+  }
+
+  &__search-form.header__search-form--opened {
+    top: 100%;
+  }
+
+  &__buttons {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+  }
+
+  &__callback-button {
+    display: none;
+
+    @include vp-tablet-landscape {
+      display:flex;
+    }
+  }
+
+  &__search-button {
+    background-color: $accent-bg;
+    color: $base;
+
+    @include vp-tablet-landscape {
+      display:none;
+    }
+
+    svg {
+      width: 18px;
+      height: 18px;
+    }
+  }
+
+  &__cart-button {
+    background-color: $accent-bg-items;
+    color: $base;
+
+    &--has {
+      @include vp-tablet {
+        width:125px;
+        height: 48px;
+
+        .header__cart-icon {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 62px;
+          height: 48px;
+        }
+      }
+    }
+
+    svg {
+      width: 24px;
+      height: 24px;
+    }
+  }
+
+  &__cart-button &__cart-value {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 14px;
+    color: $white;
+    width: 17px;
+    height: 16px;
+    border-radius: 50%;
+    background-color: $accent-link;
+  }
+
+  &--menu-opened .header__menu {
+    top: 0;
+    left: 0;
+    right: 0;
+  }
+
+  &__contacts {
+    position: relative;
+
+    &:hover .header__contacts-trigger {
+      svg {
+        transform: rotate(180deg);
+      }
+    }
+
+    &:hover .header__contacts-tooltip {
+      display: block;
+    }
+  }
+
+  .header__contacts-trigger {
+    cursor: pointer;
+    position: relative;
+    display: none;
+    align-items: center;
+    gap: 7px;
+    color: $base;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 21px;
+
+    @include vp-tablet-landscape {
+      display:flex;
+    }
+
+    svg {
+      color: $base;
+      width: 10px;
+      height: 7px;
+      transition: all .3s ease-in-out;
+    }
+  }
+
+  &__contacts-tooltip {
+    position: absolute;
+    display: none;
+    top: 100%;
+    left: 0;
+    right: 0;
+    padding: 26px;
+    background-color: $white;
+    margin: 13px auto 0;
+    width: max-content;
+    border-radius: 8px;
+    box-shadow: 0 1px 16px #00000026;
+
+    &:before {
+      content: "";
+      position: absolute;
+      bottom: 100%;
+      left: 30px;
+      width: 43px;
+      height: 13px;
+      // background-image: url(../images/tooltip.svg);
+      background-position: center;
+      background-repeat: no-repeat;
+    }
+
+    &:after {
+      content: "";
+      position: absolute;
+      bottom: 100%;
+      left: 0;
+      right: 0;
+      width: 100%;
+      height: 13px;
+    }
+  }
+
+  &__contacts-tooltip-item {
+    &:not(:last-of-type) {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+      margin-bottom: 20px;
+    }
+
+    &:not(:last-of-type) a {
+      color: $base;
+      font-size: 16px;
+      font-weight: 500;
+      line-height: 130%;
+    }
+  }
+
+  &__contacts-tooltip-title {
+    color: rgba($base, 0.5);
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    margin-bottom: 6px;
+  }
 }
+
+/*.header {
+  z-index: 3;
+  position: sticky;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: #fff;
+  border-bottom: 1px solid #ecedef
+}
+
+@media screen and (min-width: 1440px) {
+  .header {
+      top:-46px
+  }
+}*/
+
+/*.header.header--menu-opened .header__burger-button {
+  background-color: #111
+}
+
+.header.header--menu-opened .header__burger-button span:first-child {
+  transform: rotate(45deg) translateY(6px) translate(6px)
+}
+
+.header.header--menu-opened .header__burger-button span:nth-child(2) {
+  opacity: 0
+}
+
+.header.header--menu-opened .header__burger-button span:last-child {
+  transform: rotate(-45deg) translateY(-6px) translate(5px)
+}*/
+
+/*.header.header--menu-opened .header__search-form {
+  z-index: 1;
+  position: absolute;
+  padding-top: 29px;
+  padding-right: 80px
+}
+
+@media screen and (min-width: 720px) {
+  .header.header--menu-opened .header__search-form {
+      padding-top:33px;
+      padding-right: 90px
+  }
+}*/
+
+// @media screen and (min-width: 1080px) {
+  // .header.header--menu-opened .header__search-form {
+      // padding-right:105px
+  // }
+// }
+
+/*@media screen and (min-width: 1440px) {
+  .header.header--menu-opened .header__search-form {
+      position:static
+  }
+}*/
+
+/*.header__inner {
+  padding: 20px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #fff
+}
+
+@media screen and (min-width: 720px) {
+  .header__inner {
+      padding:25px 0
+  }
+}*/
+
+/*.header__buttons {
+  display: flex;
+  align-items: center;
+  gap: 12px
+}*/
+
+/*.header__callback-button {
+  display: none
+}
+
+@media screen and (min-width: 1440px) {
+  .header__callback-button {
+      display:flex
+  }
+}*/
+
+/*.header__search-button,
+.header__cart-button,
+.header__burger-button {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 0;
+  border-radius: 8px;
+  width: 48px;
+  height: 48px;
+  padding: 0
+}*/
+
+/*.header__search-button {
+  background-color: #f4f5f6;
+  color: #111
+}
+
+.header__search-button svg {
+  width: 18px;
+  height: 18px
+}
+
+@media screen and (min-width: 1440px) {
+  .header__search-button {
+      display:none
+  }
+}*/
+
+/*.header__cart-button {
+  background-color: #f4f5f6;
+  color: #111
+}
+
+.header__cart-button svg {
+  width: 24px;
+  height: 24px
+}
+
+.header__cart-button .header__cart-value {
+  display: none;
+  align-items: center;
+  justify-content: center;
+  font-size: 19px;
+  font-weight: 600;
+  border-left: 1px solid rgba(10,50,122,.2);
+  width: 62px;
+  height: 48px
+}
+
+@media screen and (min-width: 720px) {
+  .header__cart-button--has {
+      width:125px;
+      height: 48px
+  }
+
+  .header__cart-button--has .header__cart-value {
+      display: flex
+  }
+
+  .header__cart-button--has .header__cart-icon {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 62px;
+      height: 48px
+  }
+}*/
+
+/*.header__burger-button {
+  z-index: 1;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 6px;
+  background-color: #0a327a;
+  padding: 11px
+}
+
+.header__burger-button span {
+  background-color: #fff;
+  width: 26px;
+  height: 2px;
+  transition: all .3s ease-in-out
+}
+
+@media screen and (min-width: 1440px) {
+  .header__burger-button {
+      display:none
+  }
+}*/
+
+/*.header__search-form {
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: #fff;
+  padding: 22px 20px;
+  transition: all .3s ease-in-out
+}*/
+
+/*.header__search-form.header__search-form--opened {
+  top: 100%
+}*/
+
+/*@media screen and (min-width: 720px) {
+  .header__search-form {
+      padding:22px 30px
+  }
+}*/
+
+// @media screen and (min-width: 1080px) {
+  //.header__search-form {
+  //    padding:22px 50px
+  // }
+// }
+
+/*@media screen and (min-width: 1440px) {
+  .header__search-form {
+      z-index:1;
+      flex-shrink: 0;
+      position: relative;
+      padding: 0;
+      display: block;
+      max-width: 460px;
+      width: 100%
+  }
+}*/
+
+/*.header__middle {
+  display: flex;
+  gap: 14px
+}*/
+
+/*.header__catalog {
+  display: none;
+  align-items: center;
+  gap: 12px
+}
+
+.header__catalog svg {
+  width: 14px;
+  height: 14px
+}
+
+@media screen and (min-width: 1440px) {
+  .header__catalog {
+      display:flex
+  }
+}*/
+
+/*.header.header--menu-opened .header__menu {
+  top: 0;
+  left: 0;
+  right: 0
+}*/
+
+/*.header__contacts {
+  position: relative
+}
+
+.header__contacts:hover .header__contacts-trigger svg {
+  transform: rotate(180deg)
+}
+
+.header__contacts:hover .header__contacts-tooltip {
+  display: block
+}
+
+.header__contacts-trigger {
+  cursor: pointer;
+  position: relative;
+  display: none;
+  align-items: center;
+  gap: 7px;
+  color: #111;
+  font-size: 20px;
+  font-weight: 500
+}
+
+.header__contacts-trigger svg {
+  color: #111;
+  width: 10px;
+  height: 7px;
+  transition: all .3s ease-in-out
+}*/
+
+/*.header__contacts-trigger:before {
+  content: "";
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #4b9f47
+}*/
+
+/*@media screen and (min-width: 1440px) {
+  .header__contacts-trigger {
+      display:flex
+  }
+}*/
+
+/*.header__contacts-tooltip {
+  position: absolute;
+  display: none;
+  top: 100%;
+  left: 0;
+  right: 0;
+  padding: 26px;
+  background-color: #fff;
+  margin: 13px auto 0;
+  width: max-content;
+  border-radius: 8px;
+  box-shadow: 0 1px 16px #00000026
+}*/
+
+/*.header__contacts-tooltip:before {
+  content: "";
+  position: absolute;
+  bottom: 100%;
+  left: 30px;
+  width: 43px;
+  height: 13px;
+  background-image: url(../images/tooltip.svg);
+  background-position: center;
+  background-repeat: no-repeat
+}
+
+.header__contacts-tooltip:after {
+  content: "";
+  position: absolute;
+  bottom: 100%;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 13px
+}*/
+
+/*.header__contacts-tooltip-item:not(:last-of-type) {
+  display: flex;
+  flex-direction: column;
+  gap: 8px
+}
+
+.header__contacts-tooltip-item:not(:last-of-type) a {
+  color: #111;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 130%
+}
+
+.header__contacts-tooltip-item:not(:last-of-type) {
+  margin-bottom: 20px
+}*/
+
+/*.header__contacts-tooltip-title {
+  color: #727272;
+  font-size: 14px;
+  margin-bottom: 6px
+}*/
+
