feat(header): дополняет стили блока

--- a/src/components/layout/header.pug
+++ b/src/components/layout/header.pug
@@ -101,7 +101,7 @@ mixin header(headerMods, currentUrl)
           button.header__search-button(type="button")
             +icon("search", 18, 18)
 
-          +btn().btn--cart-main.header__cart-button.header__cart-button--has
+          +btn().btn--cart-main.header__cart-button.header__cart-button--has Корзина
             span.header__cart-icon
               +icon("icon-cart", 18, 21)
             span.header__cart-value 0
