--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -20,9 +20,11 @@
 @import 'ui/pagination.scss';
 @import 'ui/navigation.scss';
 @import 'ui/search-form.scss';
+@import 'ui/input.scss';
 
 // LAYOUT
 @import 'layout/header.scss';
+@import 'layout/mobile-menu.scss';
 @import 'layout/wrapper.scss';
 @import 'layout/footer.scss';
 
