--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -227,12 +227,19 @@
   }
 
   &__cart-button {
+    position: relative;
     background-color: $accent-bg-items;
     color: $base;
+    font-family: 'Roboto Flex';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    padding: 14px 24px;
 
     &--has {
       @include vp-tablet {
-        width:125px;
+        width:155px;
         height: 48px;
 
         .header__cart-icon {
@@ -246,9 +253,20 @@
     }
 
     svg {
-      width: 24px;
-      height: 24px;
+      width: 19px;
+      height: 19px;
     }
+  }
+
+  &__cart-icon {
+    padding: 0 5px;
+    margin-left: 6px;
+  }
+
+  &__cart-value {
+    position: absolute;
+    top: 10px;
+    right: 22px;
   }
 
   &__cart-button &__cart-value {
@@ -328,7 +346,7 @@
       left: 30px;
       width: 43px;
       height: 13px;
-      // background-image: url(../images/tooltip.svg);
+      background-image: url(../images/tooltip.svg);
       background-position: center;
       background-repeat: no-repeat;
     }
