feat(contacts-page): создает страницу с блоком контактов

--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -38,6 +38,7 @@ include ./blocks/news-article/article-banner
 
 include ./blocks/about-company/article-company
 include ./blocks/about-company/gratitude
+include ./blocks/contacts/contacts-main-block
 
 //- UI
 include ./ui/icon
