--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -63,6 +63,8 @@
 @import 'blocks/about-company/article-company.scss';
 @import 'blocks/about-company/gratitude.scss';
 
+@import 'blocks/contacts/contacts-main-block.scss';
+
 // PAGES
 @import 'pages/page-home.scss';
 @import 'pages/catalog.scss';
@@ -71,3 +73,4 @@
 @import 'pages/news-article.scss';
 @import 'pages/about-company.scss';
 @import 'pages/manufacturers-page.scss';
+@import 'pages/contacts-page.scss';
