feat(requisites): содает блок и подключает на страницу контактов

--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -38,7 +38,9 @@ include ./blocks/news-article/article-banner
 
 include ./blocks/about-company/article-company
 include ./blocks/about-company/gratitude
+
 include ./blocks/contacts/contacts-main-block
+include ./blocks/contacts/requisites
 
 //- UI
 include ./ui/icon
