--- a/src/pages/contacts-page.pug
+++ b/src/pages/contacts-page.pug
@@ -20,3 +20,4 @@ block main
 
     +breadcrumbs(nameIitemsBreadcrumbs).contacts-page__breadcrumbs
     +contacts-main-block().contacts-page__contacts-main-block
+    +requisites().contacts-page__requisites
