--- a/src/scss/pages/contacts-page.scss
+++ b/src/scss/pages/contacts-page.scss
@@ -22,4 +22,12 @@
       margin-bottom: 100px;
     }
   }
+
+  &__requisites {
+    margin-bottom: 90px;
+
+    @include vp-tablet {
+      margin-bottom: 100px;
+    }
+  }
 }
