--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -64,6 +64,7 @@
 @import 'blocks/about-company/gratitude.scss';
 
 @import 'blocks/contacts/contacts-main-block.scss';
+@import 'blocks/contacts/requisites.scss';
 
 // PAGES
 @import 'pages/page-home.scss';
