feat(contacts-page): подключает блок просмотренное к странице

--- a/src/components/layout/footer.pug
+++ b/src/components/layout/footer.pug
@@ -28,7 +28,7 @@ mixin footer(footerMods)
         ariaLabel: 'Переход на страницу - О компании.'
       },
       {
-        link: '#',
+        link: 'contacts-page.html',
         nameItem: 'Контакты',
         ariaLabel: 'Переход на страницу - Контакты.'
       },
