--- a/src/components/layout/header.pug
+++ b/src/components/layout/header.pug
@@ -41,7 +41,7 @@ mixin header(headerMods, currentUrl)
         ariaLabel: 'Переход на страницу - О компании.'
       },
       {
-        link: '#',
+        link: 'contacts-page.html',
         nameItem: 'Контакты',
         ariaLabel: 'Переход на страницу - Контакты.'
       },
