--- a/src/pages/contacts-page.pug
+++ b/src/pages/contacts-page.pug
@@ -21,3 +21,5 @@ block main
     +breadcrumbs(nameIitemsBreadcrumbs).contacts-page__breadcrumbs
     +contacts-main-block().contacts-page__contacts-main-block
     +requisites().contacts-page__requisites
+
+    +viewed().contacts-page__viewed
