feat(contacts-map): сщздает блок и подключает к странице контактов

--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -41,6 +41,7 @@ include ./blocks/about-company/gratitude
 
 include ./blocks/contacts/contacts-main-block
 include ./blocks/contacts/requisites
+include ./blocks/contacts/contacts-map
 
 //- UI
 include ./ui/icon
