--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -65,6 +65,7 @@
 
 @import 'blocks/contacts/contacts-main-block.scss';
 @import 'blocks/contacts/requisites.scss';
+@import 'blocks/contacts/contacts-map.scss';
 
 // PAGES
 @import 'pages/page-home.scss';
