feat(contacts-map): сщздает блок и подключает к странице контактов

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -76,3 +76,4 @@
 @import 'pages/about-company.scss';
 @import 'pages/manufacturers-page.scss';
 @import 'pages/contacts-page.scss';
+@import 'pages/shipping-payment-page.scss';
