feat(shipping): создает блок с логикой таба и подключает к странице

--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -43,6 +43,8 @@ include ./blocks/contacts/contacts-main-block
 include ./blocks/contacts/requisites
 include ./blocks/contacts/contacts-map
 
+include ./blocks/shipping-payment/shipping
+
 //- UI
 include ./ui/icon
 include ./ui/img
