--- a/src/pages/shipping-payment-page.pug
+++ b/src/pages/shipping-payment-page.pug
@@ -20,3 +20,4 @@ block main
       ];
 
     +breadcrumbs(nameIitemsBreadcrumbs).shipping-payment-page__breadcrumbs
+    +shipping().shipping-payment-page__shipping
