--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -67,6 +67,8 @@
 @import 'blocks/contacts/requisites.scss';
 @import 'blocks/contacts/contacts-map.scss';
 
+@import 'blocks/shipping-payment/shipping.scss';
+
 // PAGES
 @import 'pages/page-home.scss';
 @import 'pages/catalog.scss';
