fix(shipping): правит js таба блокировка кнопки

--- a/src/components/blocks/shipping-payment/shipping.pug
+++ b/src/components/blocks/shipping-payment/shipping.pug
@@ -9,7 +9,7 @@ mixin shipping()
           .shipping__tabs.tabs
             .shipping__tabs-nav.tabs__nav
               +btn().btn--tabs.tabs__button.tabs__button--active.shipping__tabs-button(disabled) Доставка
-              +btn().btn--tabs.tabs__button.shipping__tabs-button(disabled) Самовызов
+              +btn().btn--tabs.tabs__button.shipping__tabs-button Самовызов
 
             .shipping__tabs-content.tabs__content
 
