fix(shipping): правит стили для десктопа

--- a/src/components/blocks/shipping-payment/shipping.pug
+++ b/src/components/blocks/shipping-payment/shipping.pug
@@ -14,7 +14,7 @@ mixin shipping()
             .shipping__tabs-content.tabs__content
 
               .shipping__tabs-pane.tabs__pane.tabs__pane--show
-                .shipping__tabs-context.tabs__context
+                .text.shipping__tabs-text
                   p
                     | Ролики для линии укутывания отличаются разнообразием форм, так как работают с&nbsp;заготовками сложной конфигурации.
                     | Профиль такого ролика для мебельного станка может быть прямым, закругленным, скошенным.
@@ -25,8 +25,8 @@ mixin shipping()
                     | Назначение оборудования узко профессионально.
                     | Назначение техники&nbsp;&mdash; облицовывание пленками ПВХ, ПП.
 
-              .shipping__tabs-pane.tabs__pane
-                .shipping__tabs-context.tabs____context
+              .shipping__tabs-pane.shipping__tabs-pane--grid.tabs__pane
+                .text.shipping__tabs-text
                   p
                     | Все зависит от&nbsp;формы погонажа, который окутывается шпоном, пленкой или бумагой.
                     | Степень изношенности прижимных элементов влияет на&nbsp;качество приклеивания отделочного строя.
