feat(shipping-payment-page): добавляет блок просмотренное

--- a/src/pages/shipping-payment-page.pug
+++ b/src/pages/shipping-payment-page.pug
@@ -21,3 +21,5 @@ block main
 
     +breadcrumbs(nameIitemsBreadcrumbs).shipping-payment-page__breadcrumbs
     +shipping().shipping-payment-page__shipping
+
+    +viewed().shipping-payment-page__viewed
