--- a/src/scss/pages/shipping-payment-page.scss
+++ b/src/scss/pages/shipping-payment-page.scss
@@ -16,6 +16,13 @@
     @include vp-tablet {
       margin-bottom: 100px;
     }
+  }
 
+  &__viewed {
+    margin-bottom: 110px;
+
+    @include vp-tablet {
+      margin-bottom: 120px;
+    }
   }
 }
