feat(payment): создаёт и подключает блок и наполняет контент

--- a/src/scss/pages/shipping-payment-page.scss
+++ b/src/scss/pages/shipping-payment-page.scss
@@ -18,6 +18,14 @@
     }
   }
 
+  &__payment {
+    margin-bottom: 90px;
+
+    @include vp-tablet {
+      margin-bottom: 100px;
+    }
+  }
+
   &__viewed {
     margin-bottom: 110px;
 
