--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -68,6 +68,7 @@
 @import 'blocks/contacts/contacts-map.scss';
 
 @import 'blocks/shipping-payment/shipping.scss';
+@import 'blocks/shipping-payment/payment.scss';
 
 // PAGES
 @import 'pages/page-home.scss';
