--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -44,6 +44,7 @@ include ./blocks/contacts/requisites
 include ./blocks/contacts/contacts-map
 
 include ./blocks/shipping-payment/shipping
+include ./blocks/shipping-payment/payment
 
 //- UI
 include ./ui/icon
