--- a/src/pages/shipping-payment-page.pug
+++ b/src/pages/shipping-payment-page.pug
@@ -21,5 +21,5 @@ block main
 
     +breadcrumbs(nameIitemsBreadcrumbs).shipping-payment-page__breadcrumbs
     +shipping().shipping-payment-page__shipping
-
+    +payment().shipping-payment-page__payment
     +viewed().shipping-payment-page__viewed
