--- a/src/scss/ui/text.scss
+++ b/src/scss/ui/text.scss
@@ -31,6 +31,16 @@
     }
   }
 
+  &--big {
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 140%;
+
+    @include vp-tablet {
+      font-size: 16px;
+    }
+  }
+
   &--medium-mix {
     font-weight: 500;
     font-size: 14px;
