feat(payment): создаёт сетку и добавляет стили

--- a/src/components/blocks/shipping-payment/payment.pug
+++ b/src/components/blocks/shipping-payment/payment.pug
@@ -2,19 +2,19 @@ mixin payment()
   -
     const options = [
       {
-        text: 'Безналичный расчет',
+        text: 'Безналичный \nрасчет',
         icon: 'payment-credit',
       },
       {
-        text: 'Наличный расчет',
+        text: 'Наличный \nрасчет',
         icon: 'payment-cash',
       },
       {
-        text: 'Отсрочка платежа',
+        text: 'Отсрочка \nплатежа',
         icon: 'payment-basket',
       },
       {
-        text: 'Фиксирование стоимости при 50% предоплате',
+        text: 'Фиксирование стоимости \nпри&nbsp;50% предоплате',
         icon: 'payment-percent',
       },
     ];
