feat(sale-page): создает и подключает страницу

--- a/src/components/layout/footer.pug
+++ b/src/components/layout/footer.pug
@@ -7,13 +7,13 @@ mixin footer(footerMods)
         ariaLabel: 'Переход на страницу - Каталог.'
       },
       {
-        link: '#',
+        link: 'shipping-payment-page.html',
         nameItem: 'Доставка и оплата',
         ariaLabel: 'Переход на страницу - Доставка и оплата.'
       },
       {
         classItem: 'navigation__item--accent',
-        link: '#',
+        link: 'sale-page.html',
         nameItem: 'Акции',
         ariaLabel: 'Переход на страницу - Акции.'
       },
