--- a/src/components/layout/header.pug
+++ b/src/components/layout/header.pug
@@ -20,13 +20,13 @@ mixin header(headerMods, currentUrl)
 
     const optionsNav = [
       {
-        link: '#',
+        link: 'shipping-payment-page.html',
         nameItem: 'Доставка и оплата',
         ariaLabel: 'Переход на страницу - Доставка и оплата.'
       },
       {
         classItem: 'navigation__item--accent',
-        link: '#',
+        link: 'sale-page.html',
         nameItem: 'Акции',
         ariaLabel: 'Переход на страницу - Акции.'
       },
