--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -80,3 +80,4 @@
 @import 'pages/manufacturers-page.scss';
 @import 'pages/contacts-page.scss';
 @import 'pages/shipping-payment-page.scss';
+@import 'pages/sale-page.scss';
