fix(global): меняет и дополняет настройку глобал стилей

--- a/src/layouts/main.pug
+++ b/src/layouts/main.pug
@@ -13,15 +13,18 @@ html(lang="ru")
 
   body
     //-include /components/layout/header.pug
+    .wrapper-main(class=wrapperMods)
 
-    if (hasHeader)
-      +header(headerMods, currentUrl)
+      if (hasHeader)
+        +header(headerMods, currentUrl)
 
-    block main
-      //-block pageContent
+      block main
+        //-block pageContent
 
-    //-include /components/layout/footer.pug
-    if (hasFooter)
-      +footer(footerMods)
+      //-include /components/layout/footer.pug
+      if (hasFooter)
+        +footer(footerMods)
+
+    block modals
 
     script(src="/src/js/app.js" type="module")
