feat(sale): создает блок и подключает на страницу акции

--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -46,6 +46,8 @@ include ./blocks/contacts/contacts-map
 include ./blocks/shipping-payment/shipping
 include ./blocks/shipping-payment/payment
 
+include ./blocks/sale-page/sale
+
 //- UI
 include ./ui/icon
 include ./ui/img
