--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -70,6 +70,8 @@
 @import 'blocks/shipping-payment/shipping.scss';
 @import 'blocks/shipping-payment/payment.scss';
 
+@import 'blocks/sale-page/sale.scss';
+
 // PAGES
 @import 'pages/page-home.scss';
 @import 'pages/catalog.scss';
