--- a/src/scss/pages/sale-page.scss
+++ b/src/scss/pages/sale-page.scss
@@ -3,10 +3,17 @@
   flex-direction: column;
 
   &__breadcrumbs {
-    margin-bottom: 40px;
+    background-color: $accent-bg;
+    padding-top: 40px;
+    padding-bottom: 40px;
 
     @include vp-tablet {
-      margin-bottom: 50px;
+      padding-top: 44px;
+      padding-bottom: 50px;
     }
+  }
+
+  &__sale {
+    margin-bottom: 100px;
   }
 }
