--- a/src/scss/ui/text.scss
+++ b/src/scss/ui/text.scss
@@ -31,6 +31,16 @@
     }
   }
 
+  &--super-big {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 140%;
+
+    @include vp-tablet {
+      font-size: 20px;
+    }
+  }
+
   &--big {
     font-weight: 500;
     font-size: 15px;
