feat(sale): подключает блок просмотренное на страницу акции

--- a/src/pages/sale-page.pug
+++ b/src/pages/sale-page.pug
@@ -21,3 +21,4 @@ block main
 
     +breadcrumbs(nameIitemsBreadcrumbs).sale-page__breadcrumbs
     +sale().sale-page__sale
+    +viewed().sale-page__viewed
