--- a/src/scss/pages/sale-page.scss
+++ b/src/scss/pages/sale-page.scss
@@ -16,4 +16,12 @@
   &__sale {
     margin-bottom: 100px;
   }
+
+  &__viewed {
+    margin-bottom: 110px;
+
+    @include vp-tablet {
+      margin-bottom: 120px;
+    }
+  }
 }
