--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -18,6 +18,7 @@ include ./blocks/common/company-image
 include ./blocks/common/video
 include ./blocks/common/video-vlog
 include ./blocks/common/header-bar
+include ./blocks/common/search-modal
 
 //- page-name..
 include ./blocks/index/intro
