--- a/src/scss/global/variables.scss
+++ b/src/scss/global/variables.scss
@@ -17,6 +17,7 @@ $accent-link: #e72222;
 $blur-bg: #fff4fe;
 $border-fill: #e2e3e5;
 $base: #111111;
+$grey: #727272;
 
 // colors default
 $white: #ffffff;
