--- a/src/components/ui/search-form.pug
+++ b/src/components/ui/search-form.pug
@@ -2,6 +2,9 @@ mixin search-form()
 
   form.search-form&attributes(attributes)
     .search-form__input-container
+      button.search-form__close-modal-button.search-modal__close--js(type="button")
+        svg
+          use(href="/images/sprite.svg#tick")
       input.input.search-form__input(type="text", placeholder="Поиск по: названию, артикулу, категории")
       button.search-form__submit(type="submit")
         +icon("search", 18, 18)
