--- a/src/scss/global/mixins.scss
+++ b/src/scss/global/mixins.scss
@@ -4,6 +4,24 @@
   margin: 0;
 }
 
+@mixin scrollbar {
+  scrollbar-width: thin;
+  scrollbar-color: $bg-image transparent;
+
+  &::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: $bg-image;
+    border-radius: 10px;
+  }
+}
+
 @mixin hover {
   @media (hover: hover) {
     &:hover:not(.focus-visible) {
