--- a/src/scss/layout/mobile-menu.scss
+++ b/src/scss/layout/mobile-menu.scss
@@ -1,26 +1,36 @@
 .mobile-menu {
   z-index: 0;
-  position: absolute;
+  position: fixed;
   top: -200vh;
   left: 0;
   right: 0;
   transition: all .9s ease-in-out;
-  padding-top: 104px;
+  padding-top: 121px;
   padding-bottom: 50px;
   background-color: $white;
   max-height: 100vh;
   overflow: scroll;
 
-  @include vp-tablet-landscape {
+  @include vp-desktop {
     display: none;
   }
 
   &__group {
+    padding: 34px 0 40px;
+
+    &:not(:last-child) {
+      border-top: 1px solid $border-fill;
+    }
+
+    &:last-child {
+      background-color: $accent-bg;
+    }
+  }
+
+  &__group-inner {
     display: flex;
     flex-direction: column;
-    gap: 8px;
-    padding: 34px 0 40px;
-    border-top: 1px solid $border-fill;
+    gap: 10px;
   }
 
   &__group-link {
@@ -40,7 +50,20 @@
   }
 
   &__navigation {
+    display: flex;
     flex-direction: column;
     align-items: flex-start;
+    gap: 14px;
+
+    a {
+      color: $base;
+      font-size: 16px;
+      font-weight: 500;
+    }
+  }
+
+  &__callback {
+    justify-content: center;
+    margin-top: 12px
   }
 }
