--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -42,6 +42,7 @@
 @import 'blocks/common/video.scss';
 @import 'blocks/common/video-vlog.scss';
 @import 'blocks/common/header-bar.scss';
+@import 'blocks/common/search-modal.scss';
 
 // page-name..
 @import 'blocks/index/intro.scss';
