--- a/src/scss/ui/btn.scss
+++ b/src/scss/ui/btn.scss
@@ -1,18 +1,24 @@
 .btn {
   cursor: pointer;
   display: inline-flex;
+  justify-content: center;
+  align-items: center;
   padding: 10px 20px;
 
   color: $white;
   background-color: $primary;
   border-radius: 8px;
-
+  border: none;
   user-select: none;
 
   transition: opacity $trans-default,  background-color $trans-default, color $trans-default;
 
   &:active {
     opacity: 0.8;
+  }
+
+  @include hover-focus {
+    background-color: $primary-hover;
   }
 
   &--tabs {
@@ -81,9 +87,14 @@
     border: 2px dashed rgba($white, 0.5);
     padding: 15px 32px 16px;
 
+    &:active {
+      color: $base;
+      background-color: $primary-hover;
+    }
+
     @include hover-focus {
       color: $base;
-      background-color: $white;
+      background-color: $primary-hover;
     }
 
   }
@@ -118,10 +129,5 @@
       border-color: $primary-hover;
     }
   }
-}
 
-.button--small {
-}
-
-.button--alt {
 }
