--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -19,6 +19,8 @@ include ./blocks/common/video
 include ./blocks/common/video-vlog
 include ./blocks/common/header-bar
 include ./blocks/common/search-modal
+include ./blocks/common/popup
+include ./blocks/common/contact-form
 
 //- page-name..
 include ./blocks/index/intro
