--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -43,6 +43,8 @@
 @import 'blocks/common/video-vlog.scss';
 @import 'blocks/common/header-bar.scss';
 @import 'blocks/common/search-modal.scss';
+@import 'blocks/common/popup.scss';
+@import 'blocks/common/contact-form.scss';
 
 // page-name..
 @import 'blocks/index/intro.scss';
