--- a/src/components/layout/footer.pug
+++ b/src/components/layout/footer.pug
@@ -141,3 +141,7 @@ mixin footer(footerMods)
             each option in optionsBottomBar
               li
                 +link({href: option.link, text: option.nameItem, ariaLabel: option.ariaLabel}).footer__bottom-bar-link
+
+  +popup('callback-popup', 'Заявка')
+    +contact-form()
+
