--- a/src/components/layout/header.pug
+++ b/src/components/layout/header.pug
@@ -100,7 +100,7 @@ mixin header(headerMods, currentUrl)
                 .header__contacts-tooltip-title Почта
                 +link({href: "mailto:info@mail.ru", text: "info@mail.ru", ariaLabel: "Написать на e-mail"}).header__callback-mail
 
-            button.header__callback-button(type="button") Заказать звонок
+            button.header__callback-button.callback-button(type="button") Заказать звонок
 
           button.header__search-button(type="button")
             +icon("search", 18, 18)
